convert Hex To Decimal

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section class="section">
                 <div class="section_header">
                     <h3 class="section_title">Display Color</h3>
-                    <button class="section_header_action">Random Color</button>
+                    <button class="section_header_action" id="random-generate-color">Random Color</button>
                 </div>
 
                 <div class="divider"></div>
