hex code impliment

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                 <!-- selected color code display -->
                 <div class="select_color_code">
                     <div class="rgb_input_group">
-                        <label for="rgb_input" class="copy_mode_title">RGB</label>
+                        <label for="input-rgb" class="copy_mode_title">RGB</label>
 
                         <input type="text" id="input-rgb" class="text_input" placeholder="rgb(221, 222, 238)" disabled>
 
                     </div>
 
                     <div class="hex_input_group">
-                        <label for="hex_input" class="copy_mode_title">HEX</label>
+                        <label for="input-hex" class="copy_mode_title">HEX</label>
 
                         <input type="text" id="input-hex" class="text_input hex_input" placeholder="dddeee">
 
