ADD Preset Color Palette

--- a/index.html
+++ b/index.html
@@ -114,6 +114,19 @@
                 </div>
             </section>
 
+
+            <!-- pre set color section -->
+            <section class="section">
+                <div class="section_header">
+                    <h3 class="section_title">Colors Preset</h3>
+                </div>
+
+                <div class="divider"></div>
+
+                <div id="preset_colors" class="preset_colors">
+
+                </div>
+            </section>
         </div>
     </body>
 
