--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="style.css">
 
-        <script src="main.js"></script>
+        <script src="main.js" defer></script>
 
         <title>Random Color Picker</title>
     </head>
